# DualArmsPlanner

./: LICENSE  README.md  run.sh
devel/: .catkin  local_setup.sh  setup.sh
devel/include/planner/: JointTrajectory.h  PoseJ.h  TraPairs.h
devel/lib/pkgconfig/: m20id_35.pc  moveit_config.pc  planner.pc
devel/lib/python3/dist-packages/planner/msg/: _JointTrajectory.py  (+3 more)
devel/share/m20id_35/cmake/: m20id_35Config.cmake
devel/share/moveit_config/cmake/: moveit_configConfig.cmake
devel/share/planner/cmake/: planner-msg-paths.cmake  plannerConfig.cmake
devel/share/roseus/ros/planner/: manifest.l
src/m20id_35/: CMakeLists.txt  package.xml
src/m20id_35/config/: joint_names_m20id_35.yaml
src/m20id_35/launch/: display.launch  gazebo.launch
src/m20id_35/meshes/: MXR225MF.STL  arm_link.STL  base_link.STL  cone.STL  detector.STL  elbow_link.STL  floor.STL  forearm_link.STL  hand_link.STL  shoulder_link.STL  wall.STL  wings_defected.STL  wrist_link.STL
src/m20id_35/urdf/: m20id_35.csv  m20id_35.urdf
src/moveit_config/: .setup_assistant
src/moveit_config/config/: fake_controllers.yaml  gazebo_m20id_35.urdf  joint_limits.yaml  kinematics.yaml  m20id_35.srdf  ompl_planning.yaml
src/moveit_config/launch/: gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml
src/planner/: CMakeLists.txt
src/planner/include/: define.hpp  moveit_planner.hpp  search.hpp  solver.hpp  trajectory.hpp  trajectory_generator.hpp
src/planner/msg/: JointTrajectory.msg  TraPairs.msg
src/planner/src/: moveit_trajectory_planner.cpp
(+15 files in other folders)
